--- a/style.css
+++ b/style.css
@@ -202,15 +202,10 @@ nav a:hover {
 }
 
 .social-icons {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: rgba(255, 255, 255, 0.9);
-  border-radius: 8px;
+
   padding: 10px;
   display: flex;
   gap: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .social-icon {
@@ -307,25 +302,26 @@ footer {
   text-align: center;
   padding: var(--padding-small);
   font-size: 16px;
-  margin-top: 33px;
+  margin-top: 20px;
   animation: fadeIn 1.5s var(--animation-ease);
 }
 
-/* Responsive styling */
-@media (max-width: 768px) {
-  .content-layout {
-    flex-direction: column;
-    align-items: center;
-  }
 
-  header {
-    justify-content: space-between;
-  }
+/* Add styling for image caption */
+.image-caption {
+  text-align: center;
+  font-size: 0.9rem;
+  color: #666;
+  margin-top: 5px;
+}
+
+/* Responsive adjustments for smaller screens */
+@media (max-width: 768px) {
   .news-image {
     width: 100%;
   }
-
   .container p {
     width: 100%;
+    margin-top: 10px;
   }
 }
